--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,7 @@ requirements:
   run:
     - python
     - libconda
+    - pyyaml
     - pycosat >=0.6.1
     - pillow >=3.1  # [win]
     - nsis >=3.01   # [win]
