--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "1.5.5" %}
-{%set sha256 = "9dfcb41a178e33c1b813eb449cdbc53640500ff22149e21c3038fb59d87ff44d" %}
+{% set version = "2.0.0" %}
+{%set sha256 = "89d9c015f9cb1ffe75aea66b56eab18f7750f3809e60baadff03eec7d0066665" %}
 
 package:
   name: constructor
@@ -12,17 +12,19 @@ source:
 
 build:
   number: 0
-  script: python setup.py install
+  script: python setup.py install --single-version-externally-managed --record=record.txt
+  entry_points:
+    - constructor = constructor.main:main
 
 requirements:
   build:
     - python
+    - setuptools
 
   run:
     - python
-    - libconda
-    - pyyaml
-    - pycosat >=0.6.1
+    - conda
+    - ruamel_yaml
     - pillow >=3.1     # [win]
     - nsis >=3.01      # [win]
 
