Apply patches to fix tests using upstream PRs

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,19 @@ source:
   fn: constructor-{{ version }}.tar.gz
   url: https://github.com/conda/constructor/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    #################################################################
+    # Applying some patches to the tests pulled from upstream PRs.  #
+    #                                                               #
+    # xref: https://github.com/conda/constructor/pull/126           #
+    # xref: https://github.com/conda/constructor/pull/127           #
+    # xref: https://github.com/conda/constructor/pull/128           #
+    # xref: https://github.com/conda/constructor/pull/129           #
+    #################################################################
+    - PR_126.patch
+    - PR_127.patch
+    - PR_128.patch
+    - PR_129.patch
 
 build:
   number: 0
