--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
 
   run:
     - python
-    - conda
+    - conda >=4.5
     - ruamel_yaml
     - pillow >=3.1     # [win]
     - nsis >=3.01      # [win]
