--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,10 +9,13 @@ source:
   fn: constructor-{{ version }}.tar.gz
   url: https://github.com/conda/constructor/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    - 0001-support-noarch-python.patch
 
 build:
-  number: 1000
+  number: 2000
   script: python setup.py install --single-version-externally-managed --record=record.txt
+  noarch: python
   entry_points:
     - constructor = constructor.main:main
 
