--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,7 +7,7 @@ package:
   version: {{ version }}
 
 source:
-  - url: https://github.com/conda/constructor/releases/download/{{ version }}/constructor-{{ version }}.tar.gz
+  - url: https://github.com/conda/constructor/archive/{{ version }}.tar.gz
     sha256: {{ sha256 }}
 
 build:
@@ -53,4 +53,3 @@ extra:
     - mbargull
     - msarahan
     - hadim
-    
