add license family

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,6 +38,7 @@ test:
 about:
   home: http://github.com/conda/constructor
   license: BSD 3-Clause
+  license_family: BSD
   license_file: LICENSE.txt
   summary: create installer from conda packages
   description: |
