--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - python
     - ruamel_yaml >=0.11.14,<0.16
     - conda-standalone
-    - pillow >=3.1  # [win]
+    - pillow >=3.1,<7  # [win]
     - nsis >=3.01  # [win]
 
 test:
