--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
     sha256: {{ sha256 }}
 
 build:
-  number: 2
+  number: 3
   script: {{ PYTHON }} -m pip install . -vv
   entry_points:
     - constructor = constructor.main:main
@@ -25,7 +25,7 @@ requirements:
     - ruamel_yaml >=0.11.14,<0.16
     - conda-standalone
     - pillow >=3.1  # [win]
-    - nsis >=3.01  # [win]
+    - nsis 3.01  # [win]
 
 test:
   source_files:
