--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,11 +5,18 @@ package:
   version: {{ version }}
 
 source:
-  - url: https://github.com/conda/constructor/archive/{{ version }}.tar.gz
-    sha256: 666e3be5e6165107d7198d2753e7af6941e7f82d3bef6fc0cc98ec03310c2e01
+  url: https://github.com/conda/constructor/archive/{{ version }}.tar.gz
+  sha256: 666e3be5e6165107d7198d2753e7af6941e7f82d3bef6fc0cc98ec03310c2e01
+  patches:
+    # pyyaml 6 broke constructor 3.2.1
+    # https://github.com/conda/constructor/pull/473
+    # but there hasn't been a constructor release in a long time even
+    # after probing upstream.
+    # https://github.com/conda/constructor/issues/460
+    - 473_pyyaml_6_compatibility.diff
 
 build:
-  number: 1
+  number: 2
   script: {{ PYTHON }} -m pip install . -vv
   entry_points:
     - constructor = constructor.main:main
