--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "3.2.2" %}
+{% set version = "3.3.0" %}
 
 package:
   name: constructor
@@ -6,10 +6,10 @@ package:
 
 source:
   - url: https://github.com/conda/constructor/archive/{{ version }}.tar.gz
-    sha256: 57497a316a26631bb56c354a727980889015a1a79bf1a51131695ddbc51a0ca5
+    sha256: ad0e24a61d449f0d04d201e9c82e52a969469d9b9bdbc87c6caa47b73b17f0a4
 
 build:
-  number: 1
+  number: 0
   script: {{ PYTHON }} -m pip install . -vv
   entry_points:
     - constructor = constructor.main:main
@@ -57,6 +57,7 @@ about:
 
 extra:
   recipe-maintainers:
+    - isuruf
     - jaimergp
     - jakirkham
     - jschueller
