--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,5 +1,7 @@
-provider: {linux_aarch64: azure, linux_ppc64le: azure}
 conda_forge_output_validation: true
 github:
   branch_name: main
   tooling_branch_name: main
+noarch_platforms:
+  - linux_64
+  - win_64
