--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,9 +12,6 @@ build:
   noarch: python
   number: 0
   script: {{ PYTHON }} -m pip install . -vv
-  script_env:  # [win]
-    - CONSTRUCTOR_SIGNTOOL_PATH=C:\Program Files (x86)\Windows Kits\10\bin\10.0.17763.0\x86\signtool.exe  # [win]
-
   entry_points:
     - constructor = constructor.main:main
 
@@ -46,7 +43,7 @@ test:
     - pip check
     - pytest -v tests
     # Skip for linux-aarch64 because examples use "main" channel which has no builds for that platform.
-    - python scripts/run_examples.py  # [not aarch64]
+    - python scripts/run_examples.py  # [unix and not aarch64]
     - constructor -V
   imports:
     - constructor
