--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,7 @@ requirements:
     - ruamel.yaml >=0.11.14,<0.18
     - conda-standalone
     - pillow >=3.1
+    - jinja2
     - nsis >=3.08      # [win]
   run_constrained:   # [unix]
     - nsis >=3.08      # [unix]
