update test invocation

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,7 +47,7 @@ test:
     - nsis * *log*  # [win]
   commands:
     - pip check
-    - pytest -v tests -k "not examples"
+    - pytest -vv --tb=long --color=yes -k "not examples"
     # Skip for linux-aarch64 because examples use "main" channel which has no builds for that platform.
     # - set "NSIS_USING_LOG_BUILD=1"  # [win]
     # - pytest -v tests/test_examples.py  # [unix and not aarch64]
