--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.8
+    - python {{ python_min }}
     - setuptools >=70.1
     - setuptools-scm >=6.2
   run:
@@ -29,7 +29,7 @@ requirements:
     - conda >=4.6
     - conda-standalone
     - jinja2
-    - python >=3.8
+    - python >={{ python_min }}
     - ruamel.yaml >=0.11.14,<0.19
     - pillow >=3.1  # [not linux]
     - nsis >=3.08   # [win]
@@ -43,6 +43,7 @@ test:
     - tests
     # - examples
   requires:
+    - python {{ python_min }}
     - pip
     - pytest
     - nsis * *log*  # [win]
