--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,8 +33,9 @@ requirements:
     - ruamel.yaml >=0.11.14,<0.19
     - pillow >=3.1  # [not linux]
     - nsis >=3.08   # [win]
-  run_constrained:   # [unix]
+  run_constrained:
     - nsis >=3.08   # [unix]
+    - conda-libmamba-solver !=24.11.0
 
 test:
   files:
