--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,10 +1,11 @@
+conda_build:
+  pkg_format: '2'
+conda_build_tool: rattler-build
 conda_forge_output_validation: true
 github:
   branch_name: main
   tooling_branch_name: main
 noarch_platforms:
-- linux_64
-- win_64
-- osx_64
-conda_build:
-  pkg_format: '2'
+  - linux_64
+  - win_64
+  - osx_64
