--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,11 +31,13 @@ requirements:
     - jinja2
     - python >={{ python_min }}
     - ruamel.yaml >=0.11.14,<0.19
+    - jsonschema >=4
     - pillow >=3.1  # [not linux]
     - nsis >=3.08   # [win]
   run_constrained:
     - nsis >=3.08   # [unix]
     - conda-libmamba-solver !=24.11.0
+    - pydantic >=2
 
 test:
   files:
