--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -40,6 +40,7 @@ requirements:
     - conda >=4.6
     - conda-standalone
     - jinja2
+    - jsonschema >=4
     - python >=${{ python_min }}
     - ruamel.yaml >=0.11.14,<0.19
   run_constraints:
@@ -50,24 +51,29 @@ requirements:
 
 tests:
   - python:
-      pip_check: true
-      python_version: ${{ python_min }}.*
       imports: constructor
+      pip_check: true
+      python_version:
+        - ${{ python_min }}.*
+        - 3.13.*
   - files:
-      recipe:
-        - if: win
-          then: test_win.bat
+      # not presently used
+      # recipe:
+      #   - if: win
+      #     then: test_win.bat
       source:
         - tests/
+        - pyproject.toml
     requirements:
       run:
-        - python ${{ python_min }}.*
         - pytest
-        - if: win
-          then: nsis * *log*
+        - python ${{ python_min }}.*
+        - pywin32
+        - shellcheck
     script:
       - pytest -vv --tb=long --color=yes -k "not examples"
       - constructor -V
+      - constructor -V | python -c "import sys; v = sys.stdin.read().strip(); print(v); assert v == 'constructor ${{ version }}'"
 
 about:
   license: BSD-3-Clause
