use early, explicit schema file name test instead of import test

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -58,6 +58,9 @@ tests:
       python_version:
         - ${{ python_min }}.*
         - 3.13.*
+  - package_contents:
+      site_packages:
+        - constructor/data/construct.schema.json
   - files:
       # not presently used
       # recipe:
@@ -77,7 +80,6 @@ tests:
       - pytest -vv --tb=long --color=yes -k "not examples"
       - constructor -V
       - constructor -V | python -c "import sys; v = sys.stdin.read().strip(); print(v); assert v == 'constructor ${{ version }}', f'bad version {v}'"
-      - python -c "from constructor.construct import SCHEMA_PATH; assert SCHEMA_PATH.exists(), f'missing {SCHEMA_PATH}'"
 
 about:
   license: BSD-3-Clause
