--- a/pixi.toml
+++ b/pixi.toml
@@ -7,7 +7,7 @@
 
 [project]
 name = "constructor-feedstock"
-version = "3.51.1"  # conda-smithy version used to generate this file
+version = "3.52.3"  # conda-smithy version used to generate this file
 description = "Pixi configuration for conda-forge/constructor-feedstock"
 authors = ["@conda-forge/constructor"]
 channels = ["conda-forge"]
@@ -46,6 +46,7 @@ description = "List contents of constructor-feedstock packages built for variant
 
 [feature.smithy.dependencies]
 conda-smithy = "*"
+shellcheck = "*"
 [feature.smithy.tasks.build-locally]
 cmd = "python ./build-locally.py"
 description = "Build packages locally using the same setup scripts used in conda-forge's CI"
